test/src/e2e_vm_tests/test_programs/should_pass/test_abis/abi_with_tuples/src/some_module.sw
library;

pub struct SomeStruct {
    pub data: u64,
}