test/src/e2e_vm_tests/test_programs/should_fail/trait_associated_const_multiple_same_name/src/main.sw
library;

trait ConstantId {
    const ID: u32;
    const ID: u32;
}
